tests-integration/fixtures/checking/1779903960_overlapping_instances_no_use/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
test :: forall (@a :: Type). Test (a :: Type) => (a :: Type) -> (a :: Type)

Types
Test :: Type -> Constraint

Classes
class forall (a :: Type). Test (a :: Type)
  test :: forall (@a :: Type). Test (a :: Type) => (a :: Type) -> (a :: Type)

Instances
instance forall (t :: Type). Test (t :: Type)
instance Test Int

Diagnostics
error[OverlappingInstances]: Overlapping type class instances found for: Test Int
  --> 9:1..10:13
  |
9 | instance testInt :: Test Int where
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  trivia: forall (t :: Type). Test (t :: Type) is matching
  trivia: Test Int is matching
